# python_tracker

./: .gitignore  Makefile  README.md  config.yaml  data.db  docker-compose.yml  docker_compose.yaml  pyproject.toml
app/: helpers.py  logger_project.py  main.py
app/public/: index.html
app/routers/: docs_page.py  healthcheck.py  login.py  security_login.py  users.py
app/services/: db_func.py  security_controller.py  user_controller.py
configs/: helpers.py
db/: alembic.ini  data.db  database.py  helpers.py  q1.py  qest1.py  quest2.py
db/alembic/: env.py
db/alembic/versions/: 1632a5d1910e_init.py  1f85b2689605_create_base_structure_1.py  385b1058aa46_create_base_structure_2.py  39e62730d2db_init.py  3b0b5cd61575_unique_role_role.py  80e80485a3ad_add_unique_user_email.py  88ecd4db692d_add_userrole_with_surrogate_key.py  bc789024d3a9_create_base_structure.py  f92fe563e835_add_v2_passwords.py
db/migrations/: alembic.ini
db/models/: courses.py  securities.py  users.py
security/: auth.py
todo/: Python tracker.html
