[tool.poetry]
name = "python-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pyyaml = "^6.0"
sqlalchemy = "^2.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
